[package]
name = "wolf3d_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wolf3d_rs"
path = "src/main.rs"
required-features = ["native"]

[features]
native = []

[dependencies]
wgpu = { version = "27", features = ["webgl"] }
winit = { version = "=0.30.9", features = ["rwh_06"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "=0.3.77", features = ["Document", "Window", "HtmlCanvasElement"] }
console_log = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
